add forecast in the index page

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
             <p id="condition"></p>
             <button id="favBtn">⭐ Add to Favorites</button>
         </div>
+         <p id="errorMsg"></p>
+        <div id="forecastBox" class="hidden">
+            <h3>3-Day Forecast</h3>
+            <div id="forecastContainer" class="forecast-container"></div>
+        </div>
   </main>
 
   <footer>
