added favorites in the html page

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
             <h3>3-Day Forecast</h3>
             <div id="forecastContainer" class="forecast-container"></div>
         </div>
+        <h3>⭐ Favorites</h3>
+        <ul id="favList"></ul>
   </main>
 
   <footer>
