--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
   <main class="container">
     <div class="search">
-      <input type="text" id="cityInput" placeholder="Type a city">
+      <input type="text" id="cityInput" autocomplete="off" placeholder="Type a city">
+      <ul id="suggestions" class="suggestions hidden"></ul>
       <button id="searchBtn">Search</button>
     </div>
 
